--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "axios": "^1.3.3",
+    "pinia": "^2.0.30",
     "vue": "^3.2.45",
-    "vue-axios": "^3.5.2"
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.58.1",
-    "vite": "^4.1.0"
+    "sass-loader": "^13.2.0",
+    "vite": "^4.1.0",
+    "webpack": "^5.75.0"
   }
 }
