--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "patch-package": "^6.5.1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
